/*
* This build file was auto generated by running the Gradle 'init' task
* by 'martindilger' at '18.01.15 17:15' with Gradle 1.10
*
* This generated file contains a commented-out sample Java project to get you started.
* For more details take a look at the Java Quickstart chapter in the Gradle
* user guide available at http://gradle.org/docs/1.10/userguide/tutorial_java_projects.html
*/

buildscript {
    repositories {
        mavenCentral()
        jcenter()
        maven {
            url = 'http://repo.spring.io/milestone'
        }
    }
    dependencies {
        classpath "io.spring.gradle:dependency-management-plugin:0.5.4.RELEASE"
    }

}

allprojects {

    apply plugin: 'java'

    repositories {
        // Use 'maven central' for resolving your dependencies.
        // You can declare any Maven/Ivy/file repository here.
        mavenCentral()
        maven { url "https://jitpack.io" }
    }
}

subprojects {



    group = "de.effectivetrainings"
    version = "0.1.0"
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
    compileJava.options.verbose = true

    task listAllDependencies(type: DependencyReportTask) {}

}

configurations {
}

// In this section you declare the dependencies for your production and test code
dependencies {
    testCompile "junit:junit:4.12"
}




task wrapper(type: Wrapper) {
    gradleVersion = '2.10'
}
